--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 async-trait = "0.1"
+tracing = "0.1"
 
 [dev-dependencies]
 tokio = { version = "1.48", features = ["full"] }
